# StellarLatex

./: .gitignore  CMakeLists.txt  README.md
common/: common.cpp  common.hpp
common/bibtex/: bibtex.c  bibtex.h
common/ctan/: ctanFileManager.cpp  ctanFileManager.hpp  ctanInterface.h  extractFile.cpp  extractFile.hpp
common/kpathsea/: filequery.cpp  filequery.hpp  kpathsea.c  kpathsea.h  kpfind.cpp  type.h
common/localkpse/: kpfind.cpp  kpseemu.c  kpseemu.h  type.h
common/makeindexk/: c-auto.h  makeindex.h  mkind.c  mkind.h
common/md5/: md5.h
common/memory/: texmfmem.h  xmemory.c  xmemory.h
common/synctexdir/: synctex.c
common/teckit/: Engine.cpp  teckit
common/tree/: tree.c  tree.h
common/w2c/: config.h
common/web2c/: cpascal.h  main.c  main.cpp  texfile.c  texmfmp.c  texmfmp.h
common/web2c/controller/: control_routine.cpp  control_utils.hpp  db.cpp  dynamic_commands.cpp
common/web2c/lib/: eofeoln.c  lib.h  openclose.c  version.c
dvipdfm.wasm/: CMakeLists.txt  core-bridge.c  dvipdfmx-wasm.c  library.js  main.c  pre.js
pdftex.wasm/: CMakeLists.txt  kpseemu.c  kpseemu.h  library.js  main.c  pre.js  texfile.c  texmfmp.c  texmfmp.h
pdftex.wasm/ctan/: ctanFileManager.cpp  ctanFileManager.hpp  ctanInterface.h  extractFile.cpp
pdftex.wasm/pdftexdir/: expanded.test  macnames.c  mapfile.c  pdfimage.test  pdftex.defines  pdftex.test  pdftex.web  pdftexextra.c  pdftoepdf.cc  pdftosrc.cc  pdftosrc.test  ptexlib.h  ptexmac.h  ttf2afm.c  ttf2afm.test  utils.c  wprob.test  writeimg.c  writejpg.c  writet3.c
pdftex.wasm/pdftexdir/am/: pdftex.am
pdftex.wasm/pdftexdir/regex/: regcomp.c  regex_internal.h
pdftex.wasm/pdftexdir/tests/: cnfline.test
pdftex.wasm/tex/: pdftex-pool.c  pdftex0.c  pdftexcoerce.h  pdftexd.h  pdftexini.c
pdftex.wasm/w2c/: config.h
xetex.wasm/: CMakeLists.txt  XeTeXEngine.js  kpseemu.c  library.js  main.c  pre.js  texfile.c  texmfmp.c  texmfmp.h
xetex.wasm/tex/: xetex-pool.c  xetex0.c  xetexcoerce.h  xetexd.h  xetexini.c
xetex.wasm/xetexdir/: XeTeXFontInst.cpp  XeTeXFontMgr.cpp  XeTeXFontMgr.h  XeTeXFontMgr_FC.cpp  XeTeXFontMgr_FC.h  XeTeXLayoutInterface.cpp  XeTeX_ext.c  XeTeX_ext.h  XeTeX_pic.c  pdfimage.cpp  xetex-shim.cpp
xetex.wasm/xetexdir/am/: xetex.am
xetex.wasm/xetexdir/image/: jpegimage.c
